--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -24,7 +24,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '12.x'
-    - run: npm install
+    - run: cd $GITHUB_WORKSPACE/incidents-app
+    - run: npm run install
     - run: npm run build
 
     - uses: azure/login@v1
