--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -15,18 +15,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [12.x, 14.x]
+
     steps:            
     - uses: actions/checkout@v2
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: '12.x'
-    - run: cd $GITHUB_WORKSPACE/incidents-app
-    - run: npm run install
-    - run: npm run build
+        node-version: '14.x'
+    - run: |
+        cd $GITHUB_WORKSPACE/incidents-app
+        npm install
+        npm run build
 
     - uses: azure/login@v1
       with:
