--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:            
     - uses: actions/checkout@v2
@@ -26,11 +27,14 @@ jobs:
         npm install
         npm run build
 
+   
+
+  deploy:
+    name: Deploy
+    needs: build
     - uses: azure/login@v1
       with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-  deploy:
-    needs: build
     - name: Upload to blob storage
       uses: azure/CLI@v1
       with:
