Adding depending jobs

--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -31,7 +31,7 @@ jobs:
 
   deploy:
     name: Deploy
-    needs: build
+    needs: Build
     - uses: azure/login@v1
       with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
