--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -17,15 +17,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:            
     - uses: actions/checkout@v2
+
     - name: Use Node.js
       uses: actions/setup-node@v1
       with:
         node-version: '14.x'
+
     - run: |
         cd $GITHUB_WORKSPACE/incidents-app
         npm install
         npm run build
-    - uses: /upload-artifact@master
+        
+    - uses: actions/upload-artifact@master
       with:
         name:  ${{ env.artifactName }}
         path: $GITHUB_WORKSPACE/incidents-app/build
@@ -38,10 +41,12 @@ jobs:
     - uses: actions/download-artifact@master
       with:
         name:  ${{ env.artifactName }}
-        path: $GITHUB_WORKSPACE/incidents-app/build    
+        path: $GITHUB_WORKSPACE/incidents-app/build
+
     - uses: azure/login@v1
       with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: Upload to blob storage
       uses: azure/CLI@v1
       with:
