--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -53,7 +53,7 @@ jobs:
       with:
         azcliversion: 2.0.72
         inlineScript: |
-            az storage blob upload-batch --account-name ${{ env.storageName }} -s   -d '$web'
+            az storage blob upload-batch --account-name ${{ env.storageName }} -s ${{ github.workspace }} -d '$web'
 
     - name: Purge CDN endpoint
       uses: azure/CLI@v1
