--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -55,7 +55,7 @@ jobs:
       with:
         azcliversion: 2.0.72
         inlineScript: |
-            az storage blob upload-batch --account-name ${{ env.storageName }} -s ${{ github.workspace }}/incidents-app/build -d '$web'
+            az storage blob upload-batch --account-name ${{ env.storageName }} -s $GITHUB_WORKSPACE/incidents-app/build -d '$web'
 
     - name: Purge CDN endpoint
       uses: azure/CLI@v1
